# fastProject

./: .env-docker-comm  .env-test-db  .gitignore  Dockerfile  Makefile  README.md  celerybeat-schedule  debugLog.log.1  docker-compose-test.yaml  docker-compose.yaml  docker-gunicorn.yaml  docker-uvicorn.yaml  dump.rdb  errorLog.log.3  pyproject.toml  querie.sql  requirements.txt  utils.py
alembic/: env.py
alembic/versions/: 2024_02_03_0233-818c2e82ca93_create_migration.py  2024_02_04_0328-e5b9d9651c33_user_unique_true_migration2.py  2024_02_04_0414-24b86cfa14d1_user_unique_true_migration3.py  2024_02_04_2304-d4dad98ecb0b_renaming.py  2024_02_05_2059-a60ff562c604_deleted_is_group.py  2024_02_06_0034-b11b5c276e18_aaas.py  2024_02_06_0046-3550b0c13b95_aaas.py  2024_02_06_1640-f042cfa8ed39_aaas.py  2024_02_06_1945-b88a5ea9dcf5_refactor_of_secondary.py  2024_02_06_1959-4358728b89e1_refactor_of_secondary.py  2024_02_06_2057-6d9a202ab922_refactor_of_secondary.py  2024_02_07_2255-4a4ee2571cd2_refactor_of_secondary.py  2024_02_10_0049-fdd40642ab08_refactor_of_secondary.py  2024_02_10_0104-f79aaef58ae5_refactor_of_secondary.py  2024_02_18_0011-38955182b01b_added.py  2024_02_28_1816-b6be8db1a4d8_added_active_and_updated_fields_to_user_.py  2024_02_29_1643-7a5fbba3c24b_added_active_and_updated_fields_to_user_.py  2024_02_29_1939-bedd3a4e04ae_added_active_and_updated_fields_to_user_.py  2024_02_29_1940-18ed1eb65a44_added_active_and_updated_fields_to_user_.py  2024_03_10_1432-1d73b74a7e5c_your_migration_message.py
chat_front/: package-lock.json  package.json
chat_front/src/: App.jsx
media_processor/: .gitignore  docker-compose.yml  docker-compose_min.yml  profile.speedscope.json  pyproject.toml  small_multipart_file_test
media_processor/src/: bootstrap.py  config.py
media_processor/src/adapters/: cache.py  compressor_adapter.py  inner_bus.py  messagequeues.py  s3client.py
media_processor/src/dependencies/: queue.py
media_processor/src/domain/: entities.py  events.py
media_processor/src/entrypoints/: app.py
media_processor/src/services/: S3service.py  deduplicator.py  file_deleter.py  file_processor.py  filer_deleter.py  kafka_service.py  processorService.py  stream_handlers.py  video_compressor.py
media_processor/tests/: conftest.py  multiple_uploading_test.py
media_processor/tests/unit_tests/: compressor_tests.py  video_stream_handler_test.py
media_processor/uploads/: image_file_test  multiple_images_file_test
message_service/: .dockerignore  alembic.ini  alembic_script.sh  pyproject.toml  redis.Dockerfile
message_service/alembic/: env.py
message_service/alembic/versions/: 2024_05_03_1954-9fcde0bd97a9_initial_migration.py
message_service/nginx/html/: nginx.conf
message_service/src/: logger.py
message_service/src/authorization/: dependency_auth.py
message_service/src/crud/: cache_repo.py  conversation_repository.py  exceptions.py  repo_abstract.py
message_service/src/dependencies/: chat_service_dependency.py  repo_providers_dependency.py  session_dependency.py
message_service/src/loggs/: config.json
message_service/src/middlewares/: log_middleware.py
message_service/src/models/: base.py
message_service/src/routers/: messages.py  users.py
message_service/src/schemas/: message.py  shcemas_from_db.py  users.py
message_service/src/services/: auth_service.py  friends_service.py  message_handlers.py  redis_service.py
message_service/tests/: auth_mocks.py
nginx/html/: index.html  nginx.conf
src/: api_examples.py  base.py  config.py  config_file.py  logger.py  main.py  utils.py
src/authorization/: __init__.py  amm.py  amm2.py  dependency_auth.py  dependency_hash.py  exceptions.py  security.py  services.py  token_schema.py
src/connections/: connection_manager.py
src/crud/: base_crud_interface.py  conversation_crud.py  conversation_repository.py  demo_relational_crud.py  exceptions.py  invite_repo.py  message_repository.py  repo_abstract.py  user_crud.py  user_repository.py  utils.py
src/dependencies/: broker_dependency.py  connection_dependencies.py  dependency_hash.py  get_dependency.py  hash_dependency.py  redis_client_dependency.py  repo_providers_dependency.py  service_dependencies.py  session_dependency.py
tests/: conftest.py  data_generator.py  test_users.py  utils.py
(+46 files in other folders)
