[tool.poetry]
name = "microchat"
version = "0.1.0"
description = "Small messanger"
authors = ["SosisterRapStar <timoshenkovvanya@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standart"], version = "^0.27.0"}
fastapi = "^0.109.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
pydantic-settings = "^2.1.0"
asyncpg = {extras = ["standart"], version = "^0.29.0"}
python-dotenv = "^1.0.1"
alembic = {extras = ["standart"], version = "^1.13.1"}
websockets = {extras = ["standart"], version = "^12.0"}
pydantic = {extras = ["email"], version = "^2.6.0"}
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
